Don't shutdown custom scheduler